@@ -5,6 +5,7 @@ version 1.2.0
 * switch to DOM XML lib for better and faster memory management
 * skeleton for new classes : EthernetInterface, EthernetIfStore, NetworkPropertiesContainer
 * rule-edit new filter : 'services has'
+* rule-edit new actions : logEnd-enable, logEnd-disable, logStart-enable, logStart-disable
 * rule->API_setDescription() implemented
 * new function implemented for IpsecTunnels to help manipulate them : proxyIdList(), searchProxyIdLine($local,$remote), hasProxyId($local,$remote), findAvailableProxyIdName($baseName), removeProxyId($local,$remote), addProxyId($local,$remote,$name=null)
 
